<?xml version="1.0" encoding="utf-8"?>
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_ingredients"
    android:padding="10dp"
    android:background="@drawable/border"
    android:textColor="@color/colorText_Icons"
    tools:text="Test Recipe Hello"
    android:textSize="20sp" />
